<resources>
    <string name="app_name">SnapMap</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="enter_photo_title_placeholder">Enter the title of the photo</string>

    <string name="tag1">Tag 1</string>
    <string name="tag2">Tag 2</string>
    <string name="tag3">Tag 3</string>

    <string name="capture">Capture</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="titles">Titles</string>
    <string name="show_map">Show Map</string>
    <string name="menu_choice">Make yout choice</string>
    <string name="title_placeholder">Tiutlo</string>

    <!--Menu dek Navigation Drawer-->
    <string-array name="nav_drawer_items">
        <item>Titles</item>
        <item>Tags</item>
        <item>Capture</item>
    </string-array>
</resources>