<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_capture"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_marginLeft="@dimen/button_margin_bottom"
        android:layout_marginStart="@dimen/button_margin_bottom"
        android:text="@string/capture"
        android:textStyle="bold" />



    <ImageView
        android:id="@+id/image_view"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/edit_text_title"
        android:layout_centerHorizontal="true"
        />



    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_photo_title_placeholder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/button_save"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_capture"
        android:layout_marginEnd="@dimen/button_margin_bottom"
        android:layout_marginRight="@dimen/button_margin_bottom"
        android:text="@string/save"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_text_tag_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tag1"

        android:layout_marginBottom="@dimen/margin_tag_1"
        android:layout_above="@+id/button_capture"
        android:layout_alignLeft="@+id/button_capture"
        android:layout_alignStart="@+id/button_capture"
        />


    <EditText
        android:id="@+id/edit_text_tag_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tag2"

        android:layout_alignTop="@id/edit_text_tag_1"
        android:layout_alignLeft="@id/edit_text_tag_1"
        android:layout_alignStart="@id/edit_text_tag_1"
        android:layout_marginTop="@dimen/margin_tags"
        />


    <EditText
        android:id="@+id/edit_text_tag_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tag3"

        android:layout_alignTop="@id/edit_text_tag_2"
        android:layout_alignLeft="@id/edit_text_tag_2"
        android:layout_alignStart="@id/edit_text_tag_2"
        android:layout_marginTop="@dimen/margin_tags"
        />




</RelativeLayout>